--- a/Clone_Starbucks/Source/Screen/Home/Order/View/OrderMenuTableViewCell.xib
+++ b/Clone_Starbucks/Source/Screen/Home/Order/View/OrderMenuTableViewCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="431" height="129"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eZ3-zf-eo4">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eZ3-zf-eo4">
                         <rect key="frame" x="30" y="20" width="89" height="89"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="eZ3-zf-eo4" secondAttribute="height" multiplier="1:1" id="Pcc-Ag-Z5c"/>
