--- a/Clone_Starbucks/Source/Screen/Base.lproj/Main.storyboard
+++ b/Clone_Starbucks/Source/Screen/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="X4U-KJ-gLq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0fA-jw-YxI">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -866,7 +866,7 @@
                                             <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="15"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <segue destination="UDa-PM-j38" kind="presentation" id="zXd-Qb-gB4"/>
+                                            <segue destination="UDa-PM-j38" kind="presentation" identifier="goToOrder" id="zXd-Qb-gB4"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -1048,6 +1048,9 @@
                                                         <buttonConfiguration key="configuration" style="plain" title="주문하기">
                                                             <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="20"/>
                                                         </buttonConfiguration>
+                                                        <connections>
+                                                            <action selector="orderBtnPressed:" destination="UDa-PM-j38" eventType="touchUpInside" id="orX-iK-jXh"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
