--- a/Clone_Starbucks/Source/Screen/Base.lproj/Main.storyboard
+++ b/Clone_Starbucks/Source/Screen/Base.lproj/Main.storyboard
@@ -566,7 +566,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fs9-vU-kEJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2038" y="2081"/>
+            <point key="canvasLocation" x="2038" y="2164"/>
         </scene>
         <!--Order Cart View Controller-->
         <scene sceneID="6gW-tY-QJI">
@@ -719,26 +719,28 @@
                                 <rect key="frame" x="0.0" y="224.5" width="414" height="517.5"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6U3-Mp-XsH">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="500"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="p6j-cg-6R1">
-                                                <rect key="frame" x="0.0" y="120" width="414" height="380"/>
+                                                <rect key="frame" x="0.0" y="110" width="414" height="890"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </tableView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="주문 메뉴" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="64X-L6-6zY">
-                                                <rect key="frame" x="20" y="30" width="74" height="24"/>
+                                                <rect key="frame" x="20" y="20" width="74" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pK7-1F-3PM">
-                                                <rect key="frame" x="20" y="74" width="98" height="31"/>
+                                                <rect key="frame" x="8" y="64" width="98" height="31"/>
                                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" image="checkmark.square" catalog="system" title="전체 선택"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="checkmark.square" catalog="system" title="전체 선택" buttonSize="medium">
+                                                    <fontDescription key="titleFontDescription" type="system" pointSize="14"/>
+                                                </buttonConfiguration>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wht-Jh-gF0">
-                                                <rect key="frame" x="0.0" y="115" width="414" height="5"/>
+                                                <rect key="frame" x="0.0" y="105" width="414" height="5"/>
                                                 <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="5" id="To1-ly-VuX"/>
@@ -748,17 +750,17 @@
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="64X-L6-6zY" firstAttribute="leading" secondItem="6U3-Mp-XsH" secondAttribute="leading" constant="20" id="8a5-4C-P5O"/>
-                                            <constraint firstAttribute="height" constant="500" id="C1m-ep-2yf"/>
+                                            <constraint firstAttribute="height" constant="1000" id="C1m-ep-2yf"/>
                                             <constraint firstAttribute="trailing" secondItem="p6j-cg-6R1" secondAttribute="trailing" id="GN2-4T-i8k"/>
                                             <constraint firstAttribute="trailing" secondItem="Wht-Jh-gF0" secondAttribute="trailing" id="J5y-j6-C0t"/>
                                             <constraint firstItem="Wht-Jh-gF0" firstAttribute="leading" secondItem="6U3-Mp-XsH" secondAttribute="leading" id="Oix-NI-Otl"/>
                                             <constraint firstItem="pK7-1F-3PM" firstAttribute="top" secondItem="64X-L6-6zY" secondAttribute="bottom" constant="20" id="OtL-Ts-OTv"/>
                                             <constraint firstAttribute="bottom" secondItem="p6j-cg-6R1" secondAttribute="bottom" id="OzZ-wc-bCC"/>
-                                            <constraint firstItem="64X-L6-6zY" firstAttribute="top" secondItem="6U3-Mp-XsH" secondAttribute="top" constant="30" id="Ssz-bQ-NQW"/>
-                                            <constraint firstItem="pK7-1F-3PM" firstAttribute="leading" secondItem="6U3-Mp-XsH" secondAttribute="leading" constant="20" id="XVg-MK-ZOs"/>
+                                            <constraint firstItem="64X-L6-6zY" firstAttribute="top" secondItem="6U3-Mp-XsH" secondAttribute="top" constant="20" id="Ssz-bQ-NQW"/>
                                             <constraint firstItem="p6j-cg-6R1" firstAttribute="top" secondItem="Wht-Jh-gF0" secondAttribute="bottom" id="bJC-G8-B9Y"/>
                                             <constraint firstItem="Wht-Jh-gF0" firstAttribute="top" secondItem="pK7-1F-3PM" secondAttribute="bottom" constant="10" id="sJ2-Jf-C6Y"/>
                                             <constraint firstItem="p6j-cg-6R1" firstAttribute="leading" secondItem="6U3-Mp-XsH" secondAttribute="leading" id="yen-Hl-IKb"/>
+                                            <constraint firstItem="pK7-1F-3PM" firstAttribute="leading" secondItem="64X-L6-6zY" secondAttribute="leading" multiplier="0.4" id="zgK-jD-Qzh"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -785,23 +787,23 @@
                             <constraint firstItem="fzU-yh-5h2" firstAttribute="trailing" secondItem="XAi-JG-54C" secondAttribute="trailing" id="PCC-aL-qc8"/>
                             <constraint firstItem="gNc-Mr-NS8" firstAttribute="top" secondItem="XAi-JG-54C" secondAttribute="bottom" id="PIj-Nr-i9m"/>
                             <constraint firstItem="WKJ-4m-6IR" firstAttribute="top" secondItem="Vwo-9Y-5je" secondAttribute="bottom" id="PLI-rB-GyW"/>
-                            <constraint firstItem="XAi-JG-54C" firstAttribute="top" secondItem="o6t-Ce-KNU" secondAttribute="topMargin" id="TQU-1M-noE"/>
                             <constraint firstItem="gNc-Mr-NS8" firstAttribute="leading" secondItem="fzU-yh-5h2" secondAttribute="leading" id="WNQ-wH-SJH"/>
                             <constraint firstItem="fzU-yh-5h2" firstAttribute="bottom" secondItem="sWC-QI-Oda" secondAttribute="bottom" id="e0T-9g-tIj"/>
                             <constraint firstItem="Vwo-9Y-5je" firstAttribute="width" secondItem="gNc-Mr-NS8" secondAttribute="width" multiplier="0.5" id="lJj-EV-Bv1"/>
+                            <constraint firstItem="XAi-JG-54C" firstAttribute="top" secondItem="fzU-yh-5h2" secondAttribute="top" id="paD-i6-sOj"/>
                             <constraint firstItem="fzU-yh-5h2" firstAttribute="trailing" secondItem="WKJ-4m-6IR" secondAttribute="trailing" id="ubf-aB-FdM"/>
                             <constraint firstItem="fzU-yh-5h2" firstAttribute="trailing" secondItem="gNc-Mr-NS8" secondAttribute="trailing" id="vqz-Eb-uzE"/>
                             <constraint firstItem="sWC-QI-Oda" firstAttribute="top" secondItem="WKJ-4m-6IR" secondAttribute="bottom" id="wld-EP-9Sm"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="iYf-GU-xTK"/>
                     <connections>
                         <outlet property="orderBtn" destination="dvB-Ww-Frh" id="dHv-V3-P9Y"/>
+                        <outlet property="orderCartTableView" destination="p6j-cg-6R1" id="cdC-Qe-uNy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hus-lu-XnM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2602.898550724638" y="2895.5357142857142"/>
+            <point key="canvasLocation" x="2593" y="2957"/>
         </scene>
         <!--Order Detail Menu View Controller-->
         <scene sceneID="91A-5a-wXr">
@@ -866,6 +868,9 @@
                                         <buttonConfiguration key="configuration" style="plain">
                                             <backgroundConfiguration key="background" image="bag.fill" catalog="system"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="cartBtnPressed:" destination="72f-w8-Q9R" eventType="touchUpInside" id="Pfw-vx-7qj"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="신월IC DT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f0Q-7g-I8I">
                                         <rect key="frame" x="30" y="15" width="72.5" height="20.5"/>
@@ -927,7 +932,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EGZ-4j-muy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3149" y="2081"/>
+            <point key="canvasLocation" x="3151" y="2164"/>
         </scene>
         <!--Order Select View Controller-->
         <scene sceneID="mMJ-U5-JQm">
@@ -1390,6 +1395,9 @@
                                                         <buttonConfiguration key="configuration" style="plain" title="담기">
                                                             <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="20"/>
                                                         </buttonConfiguration>
+                                                        <connections>
+                                                            <action selector="cartBtnPressed:" destination="UDa-PM-j38" eventType="touchUpInside" id="v1W-jo-PG3"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="REw-TS-HxB">
                                                         <rect key="frame" x="97" y="0.0" width="140" height="40"/>
@@ -1454,7 +1462,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gkP-Yk-ha0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5300" y="2080"/>
+            <point key="canvasLocation" x="5216" y="2164"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="ey5-i2-Ufl">
